GNOME Bugzilla – Bug 753497
HEVC videoparser fixes: improve frame start detection
Last modified: 2015-09-10 16:18:05 UTC
Created attachment 309051 [details] [review] videoparsers: h265: Avoid skipping of EOS and EOB nals Couple of fixes to hevc videoparser plugin. -- Avoid skipping of EOS and EOB nalus as broken nals -- Fix the frame start detection
Created attachment 309052 [details] [review] videoparsers: h265: Avoid skipping of EOS and EOB nals Check slice headers in between GST_H265_NAL_SLICE_TRAIL_N and GST_H265_NAL_SLICE_RASL_R for frame start detection.
Thanks, pushed: commit a83dabd5e875288be4b7f1b4581aaa0f3f563807 Author: Sreerenj Balachandran <sreerenj.balachandran@intel.com> Date: Tue Aug 11 04:14:19 2015 +0300 videoparsers: h265: Fix the frame start detection code Check slice headers in between GST_H265_NAL_SLICE_TRAIL_N and GST_H265_NAL_SLICE_RASL_R for frame start detection. https://bugzilla.gnome.org/show_bug.cgi?id=753497 commit 2775b202dc6a2d396c64d8e9d2b4c2fe000662b0 Author: Sreerenj Balachandran <sreerenj.balachandran@intel.com> Date: Tue Aug 11 03:47:42 2015 +0300 videoparsers: h265: Avoid skipping of EOS and EOB nals EndOfSequence and EndOfBitstream nal units have size of 2 bytes. Don't consider them as broken nals. https://bugzilla.gnome.org/show_bug.cgi?id=753497